notify-python (0.1.1-2) unstable; urgency=low

  [ Scott Kitterman ]
  * debian/rules: Remove src/pynotify.c on clean, so that it actually gets
    regenerated on build. Otherwise some functions like
    attach_to_status_icon() are missing.

  [ Piotr Ożarowski ]
  * Rename XS-Vcs-Svn field to Vcs-Svn
  * Add Vcs-Browser field

  [ Loic Minier ]
  * Add /svn to the Vcs-Svn URL to allow copy-paste in svn+ssh:// URLs. :-P
  * Sourceful upload causes rebuild for python2.5; closes: #438928.
  * Depends on ${misc:Depends}.
  * Fix usage of spaces versus tab in rules; the fix for #434714 was in place,
    but had a syntax error; thanks Martin Pitt; closes: #434714.
  * Ship some testsuite scripts as examples; thanks Sebastien Bacher;
    closes: #440244.

 -- Loic Minier <lool@dooz.org>  Thu, 06 Dec 2007 15:55:13 +0100

notify-python (0.1.1-1) unstable; urgency=low

  [ Piotr Ozarowski ]
  * Added XS-Vcs-Svn field

  [ Loic Minier ]
  * Misc cleanups.
  * Update URL in copyright.
  * Set XS and XB-PV instead of debian/pyversions.
  * Only call dh_pysupport and not dh_python; fixup CDBS rule.
  * Use ${shlibs:Depends} instead of hardcoding the libnotify1 dependency.
  * New upstream release; closes: #425766.
    - Bump up libnotify-dev build-dep to >= 0.4.3.
    - Bump up python-gtk2-dev build-dep and python-gtk2 dep to >= 2.10 for
      gtk.StatusIcon.

 -- Loic Minier <lool@dooz.org>  Mon, 25 Jun 2007 13:30:50 +0200

notify-python (0.1.0-1) unstable; urgency=low

  * Initial release (Closes: #366863)

 -- Gustavo Franco <stratus@debian.org>  Tue,  4 Jul 2006 17:00:55 -0300
