@@ -11,12 +11,13 @@ notify-python (0.1.1-2) unstable; urgency=low
 
   [ Loic Minier ]
   * Add /svn to the Vcs-Svn URL to allow copy-paste in svn+ssh:// URLs. :-P
-  * Sourceful upload causes rebuild for python2.5; closes: #438928.
   * Depends on ${misc:Depends}.
   * Fix usage of spaces versus tab in rules; the fix for #434714 was in place,
     but had a syntax error; thanks Martin Pitt; closes: #434714.
   * Ship some testsuite scripts as examples; thanks Sebastien Bacher;
     closes: #440244.
+  * Rewrite build completely without the autotools CDBS class and configure,
+    make, and make install for each requested Python version; closes: #438928.
 
  -- Loic Minier <lool@dooz.org>  Thu, 06 Dec 2007 15:55:13 +0100
 
